Library/AXL(Library)/C, C++/AXDev.h

// Use Board Number and find Board Address
DWORD    __stdcall AxlGetBoardAddress(long lBoardNo, DWORD *upBoardAddress);
// Use Board Number and find Board ID
DWORD    __stdcall AxlGetBoardID(long lBoardNo, DWORD *upBoardID);
// Use Board Number and find Board Version
DWORD    __stdcall AxlGetBoardVersion(long lBoardNo, DWORD *upBoardVersion);
// Use Board Number/Module Position and find Module ID
DWORD    __stdcall AxlGetModuleID(long lBoardNo, long lModulePos, DWORD *upModuleID);
// Use Board Number/Module Position and find Module Version
DWORD    __stdcall AxlGetModuleVersion(long lBoardNo, long lModulePos, DWORD *upModuleVersion);
DWORD    __stdcall AxlGetModuleNodeInfo(long lBoardNo, long lModulePos, long *upNetNo, DWORD *upNodeAddr);
// Only for PCI-R1604[RTEX]
// Writing user data to embedded flash memory
// lPageAddr(0 ~ 199)
// lByteNum(1 ~ 120)
// Note) Delay time is required for completing writing operation to Flash(Max. 17mSec)
DWORD    __stdcall AxlSetDataFlash(long lBoardNo, long lPageAddr, long lBytesNum, BYTE *bpSetData);
// ML3 Only, Use Board and Set the EStopInterLock Parameter
// dwInterLock    : (0) Not use(Default value)
//                  (1) Using function. When E-STOP signal is externally applied after setting function, E-STOP drive command is executed to the motion control node connected to the board.
// dwDigFilterVal : Setting range of input filter constant (1~40). Unit communication Cyclic time
// Set EstopInterLock function by using dwInterLock and dwDigFilterVal on Board
DWORD    __stdcall AxlSetEStopInterLock(long lBoardNo, DWORD dwInterLock, DWORD dwDigFilterVal);
// ML3 Only, Use Board and Get the EStopInterLock Parameter
DWORD    __stdcall AxlGetEStopInterLock(long lBoardNo, DWORD *dwInterLock, DWORD  *dwDigFilterVal);
// ML3 Only, Read the External ESTOP Signal status
DWORD    __stdcall AxlReadEStopInterLock(long lBoardNo, DWORD *dwInterLock);
// Reading datas from embedded flash memory
// lPageAddr(0 ~ 199)
// lByteNum(1 ~ 120)
DWORD    __stdcall AxlGetDataFlash(long lBoardNo, long lPageAddr, long lBytesNum, BYTE *bpGetData);
// Use Board Number/Module Position and find AIO Module Number
DWORD    __stdcall AxaInfoGetModuleNo(long lBoardNo, long lModulePos, long *lpModuleNo);
// Use Board Number/Module Position and find DIO Module Number
DWORD    __stdcall AxdInfoGetModuleNo(long lBoardNo, long lModulePos, long *lpModuleNo);
// IPCOMMAND Setting at an appoint axis
DWORD    __stdcall AxmSetCommand(long lAxisNo, IPCOMMAND sCommand);
// 8bit IPCOMMAND Setting at an appoint axis
DWORD    __stdcall AxmSetCommandData08(long lAxisNo, IPCOMMAND sCommand, DWORD uData);
// Get 8bit IPCOMMAND at an appoint axis
DWORD    __stdcall AxmGetCommandData08(long lAxisNo, IPCOMMAND sCommand, DWORD *upData);
// 16bit IPCOMMAND Setting at an appoint axis
DWORD    __stdcall AxmSetCommandData16(long lAxisNo, IPCOMMAND sCommand, DWORD uData);
// Get 16bit IPCOMMAND at an appoint axis
DWORD    __stdcall AxmGetCommandData16(long lAxisNo, IPCOMMAND sCommand, DWORD *upData);
// 24bit IPCOMMAND Setting at an appoint axis
DWORD    __stdcall AxmSetCommandData24(long lAxisNo, IPCOMMAND sCommand, DWORD uData);
// Get 24bit IPCOMMAND at an appoint axis
DWORD    __stdcall AxmGetCommandData24(long lAxisNo, IPCOMMAND sCommand, DWORD *upData);
// 32bit IPCOMMAND Setting at an appoint axis
DWORD    __stdcall AxmSetCommandData32(long lAxisNo, IPCOMMAND sCommand, DWORD uData);
// Get 32bit IPCOMMAND at an appoint axis
DWORD    __stdcall AxmGetCommandData32(long lAxisNo, IPCOMMAND sCommand, DWORD *upData);
// QICOMMAND Setting at an appoint axis
DWORD    __stdcall AxmSetCommandQi(long lAxisNo, QICOMMAND sCommand);
// 8bit QICOMMAND Setting at an appoint axis
DWORD    __stdcall AxmSetCommandData08Qi(long lAxisNo, QICOMMAND sCommand, DWORD uData);
// Get 8bit QICOMMAND at an appoint axis
DWORD    __stdcall AxmGetCommandData08Qi(long lAxisNo, QICOMMAND sCommand, DWORD *upData);
// 16bit QICOMMAND Setting at an appoint axis
DWORD    __stdcall AxmSetCommandData16Qi(long lAxisNo, QICOMMAND sCommand, DWORD uData);
// Get 16bit QICOMMAND at an appoint axis
DWORD    __stdcall AxmGetCommandData16Qi(long lAxisNo, QICOMMAND sCommand, DWORD *upData);
// 24bit QICOMMAND Setting at an appoint axis
DWORD    __stdcall AxmSetCommandData24Qi(long lAxisNo, QICOMMAND sCommand, DWORD uData);
// Get 24bit QICOMMAND at an appoint axis
DWORD    __stdcall AxmGetCommandData24Qi(long lAxisNo, QICOMMAND sCommand, DWORD *upData);
// 32bit QICOMMAND Setting at an appoint axis
DWORD    __stdcall AxmSetCommandData32Qi(long lAxisNo, QICOMMAND sCommand, DWORD uData);
// Get 32bit QICOMMAND at an appoint axis
DWORD    __stdcall AxmGetCommandData32Qi(long lAxisNo, QICOMMAND sCommand, DWORD *upData);
// Get Port Data at an appoint axis - IP
DWORD    __stdcall AxmGetPortData(long lAxisNo,  WORD wOffset, DWORD *upData);
// Port Data Setting at an appoint axis - IP
DWORD    __stdcall AxmSetPortData(long lAxisNo, WORD wOffset, DWORD dwData);
// Get Port Data at an appoint axis - QI
DWORD    __stdcall AxmGetPortDataQi(long lAxisNo, WORD byOffset, WORD *wData);
// Port Data Setting at an appoint axis - QI
DWORD    __stdcall AxmSetPortDataQi(long lAxisNo, WORD byOffset, WORD wData);
// Set the script at an appoint axis.  - IP
// sc    : Script number (1 - 4)
// event : Define an event SCRCON to happen.
//         Set event, a number of axis, axis which the event happens, event content 1, 2 attribute
// cmd   : Define a selection SCRCMD however we change any content
// data  : Selection to change any Data.
DWORD    __stdcall AxmSetScriptCaptionIp(long lAxisNo, long sc, DWORD event, DWORD data);
// Return the script at an appoint axis.  - IP
DWORD    __stdcall AxmGetScriptCaptionIp(long lAxisNo, long sc, DWORD *event, DWORD *data);
// Set the script at an appoint axis.  - QI
// sc    : Script number (1 - 4)
// event : Define an event SCRCON to happen.
//         Set event, a number of axis, axis which the event happens, event content 1, 2 attribute
// cmd   : Define a selection SCRCMD however we change any content
// data  : Selection to change any Data.
DWORD    __stdcall AxmSetScriptCaptionQi(long lAxisNo, long sc, DWORD event, DWORD cmd, DWORD data);
// Return the script at an appoint axis. - QI
DWORD    __stdcall AxmGetScriptCaptionQi(long lAxisNo, long sc, DWORD *event, DWORD *cmd, DWORD *data);
// Clear orders a script inside Queue Index at an appoint axis
// uSelect IP.
// uSelect(0): Script Queue Index Clear.
//        (1): Caption Queue Index Clear.
// uSelect QI.
// uSelect(0): Script Queue 1 Index Clear.
//        (1): Script Queue 2 Index Clear.
DWORD    __stdcall AxmSetScriptCaptionQueueClear(long lAxisNo, DWORD uSelect);
// Return Index of a script inside Queue at an appoint axis.
// uSelect IP
// uSelect(0): Read Script Queue Index
//        (1): Read Caption Queue Index
// uSelect QI.
// uSelect(0): Read Script Queue 1 Index
//        (1): Read Script Queue 2 Index
DWORD    __stdcall AxmGetScriptCaptionQueueCount(long lAxisNo, DWORD *updata, DWORD uSelect);
// Return Data number of a script inside Queue at an appoint axis.
// uSelect IP
// uSelect(0): Read Script Queue Data
//        (1): Read Caption Queue Data
// uSelect QI.
// uSelect(0): Read Script Queue 1 Data
//        (1): Read Script Queue 2 Data
DWORD    __stdcall AxmGetScriptCaptionQueueDataCount(long lAxisNo, DWORD *updata, DWORD uSelect);
// Read an inside data.
//DWORD    __stdcall AxmGetOptimizeDriveData(long lAxisNo, double dMinVel, double dVel, double dAccel, double  dDecel,



// Setting up confirmes the register besides within the board by Byte.
DWORD    __stdcall AxmBoardWriteByte(long lBoardNo, WORD wOffset, BYTE byData);
DWORD    __stdcall AxmBoardReadByte(long lBoardNo, WORD wOffset, BYTE *byData);
// Setting up confirmes the register besides within the board by Word.
DWORD    __stdcall AxmBoardWriteWord(long lBoardNo, WORD wOffset, WORD wData);
DWORD    __stdcall AxmBoardReadWord(long lBoardNo, WORD wOffset, WORD *wData);
// Setting up confirmes the register besides within the board by DWord.
DWORD    __stdcall AxmBoardWriteDWord(long lBoardNo, WORD wOffset, DWORD dwData);
DWORD    __stdcall AxmBoardReadDWord(long lBoardNo, WORD wOffset, DWORD *dwData);
// Setting up confirmes the register besides within the Module by Byte.
DWORD    __stdcall AxmModuleWriteByte(long lBoardNo, long lModulePos, WORD wOffset, BYTE byData);
DWORD    __stdcall AxmModuleReadByte(long lBoardNo, long lModulePos, WORD wOffset, BYTE *byData);
// Setting up confirmes the register besides within the Module by Word.
DWORD    __stdcall AxmModuleWriteWord(long lBoardNo, long lModulePos, WORD wOffset, WORD wData);
DWORD    __stdcall AxmModuleReadWord(long lBoardNo, long lModulePos, WORD wOffset, WORD *wData);
// Setting up confirmes the register besides within the Module by DWord.
DWORD    __stdcall AxmModuleWriteDWord(long lBoardNo, long lModulePos, WORD wOffset, DWORD dwData);
DWORD    __stdcall AxmModuleReadDWord(long lBoardNo, long lModulePos, WORD wOffset, DWORD *dwData);
// Set EXCNT (Pos = Unit)
DWORD    __stdcall AxmStatusSetActComparatorPos(long lAxisNo, double dPos);
// Return EXCNT (Positon = Unit)
DWORD    __stdcall AxmStatusGetActComparatorPos(long lAxisNo, double *dpPos);
// Set INCNT (Pos = Unit)
DWORD    __stdcall AxmStatusSetCmdComparatorPos(long lAxisNo, double dPos);
// Return INCNT (Pos = Unit)
DWORD    __stdcall AxmStatusGetCmdComparatorPos(long lAxisNo, double *dpPos);
//=========== Append function. =========================================================================================================
// Increase a straight line interpolation at speed to the infinity.
// Must put the distance speed rate.
DWORD    __stdcall AxmLineMoveVel(long lCoord, double dVel, double dAccel, double dDecel);