Library/AXL(Library)/Dynamic Link/DAXDEV.h

typedef DWORD   PASCAL EXPORT funcAxmGetOptimizeDriveData(long lAxisNo, double dMinVel, double dVel, double dAccel, double  dDecel, WORD *wRangeData, WORD *wStartStopSpeedData, WORD *wObjectSpeedData, WORD *wAccelRate, WORD *wDecelRate);
extern funcAxmGetOptimizeDriveData              *AxmGetOptimizeDriveData;